Force Fly.io to use Dockerfile instead of buildpack

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -2,6 +2,7 @@ app = 'turbo-response-api'
 primary_region = 'ord'
 
 [build]
+  dockerfile = "Dockerfile"
   [build.args]
     NODE_ENV = "production"
 
