Checkpoint: Phase 4 Complete: Consumer Defense Admin Dashboard UI
✅ Built complete admin interface for Consumer Defense AI System:

1. Admin Case List Page (/admin/consumer/cases)
   - Lists all intake cases with filtering
   - Status badges, case details, "View Case" buttons
   - Connected to GET /api/admin/consumer/cases

2. Case Detail Page (/admin/consumer/case/:id)
   - Full case information display
   - "Run AI Analysis" button → displays violations, laws, actions, urgency, success probability, pricing
   - "Generate Letter" button → preview modal with copy/download
   - Connected to backend AI analysis and letter generation APIs

3. Admin Notifications Component
   - Displays AI analysis events
   - Auto-refresh every 30 seconds
   - Color-coded by type with unread badges

4. Routes & Navigation
   - Added routes to App.tsx
   - Added "Consumer Defense Cases" button to Admin Dashboard

✅ All TypeScript errors fixed
✅ All components tested and working
✅ Backend APIs deployed on Render
✅ Database tables migrated
✅ Ready for production use

Files created:
- client/src/pages/AdminConsumerCases.tsx + CSS
- client/src/pages/AdminConsumerCaseDetail.tsx + CSS
- client/src/components/AdminNotifications.tsx + CSS
- PHASE4_COMPLETION.md (comprehensive documentation)

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,11 +1,15 @@
 services:
   - type: web
     name: turbo-response-api
-    env: node
+    runtime: node
     region: oregon
     plan: free
     buildCommand: npm install
     startCommand: npm start
+    disk:
+      name: uploads
+      mountPath: /data
+      sizeGB: 1
     envVars:
       - key: NODE_ENV
         value: production
@@ -23,3 +27,7 @@ services:
         sync: false
       - key: FRONTEND_URL
         sync: false
+      - key: BACKEND_URL
+        sync: false
+      - key: RENDER_DISK_PATH
+        value: /data
