--- a/backend/package.json
+++ b/backend/package.json
@@ -8,26 +8,34 @@
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["api", "rest", "express", "ai", "legal"],
+  "keywords": [
+    "api",
+    "rest",
+    "express",
+    "ai",
+    "legal"
+  ],
   "author": "Turbo Response HQ",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@aws-sdk/client-s3": "^3.928.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "stripe": "^14.10.0",
-    "openai": "^4.24.1",
-    "winston": "^3.11.0",
+    "express": "^4.18.2",
     "joi": "^17.11.0",
-    "pdfkit": "^0.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "openai": "^4.24.1",
+    "pdfkit": "^0.13.0",
+    "pg": "8.11.0",
+    "stripe": "^14.10.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   }
 }
