Checkpoint: Checkpoint saved: Phase 2 Complete - Full Pipeline Integration
SUMMARY:
Built complete intake-to-analysis workflow connecting client intake form → database → admin dashboard → AI analysis → demand letter generation with email notifications.

FEATURES IMPLEMENTED:

1. **Case Detail Modal (AdminDashboard.tsx)**
   - Made each case in dashboard clickable
   - Created modal showing full client and case information
   - Added "Generate AI Analysis" button
   - Connected to POST /api/admin/consumer/analyze-case/:id
   - Displays AI analysis results (violations, laws, actions, urgency, success probability, pricing)
   - Added "Create Demand Letter" placeholder button
   - Modal fetches existing analysis on open

2. **Intake Form Database Integration (VERIFIED)**
   - Confirmed IntakeForm.tsx already submits to POST /api/intake
   - Stores all data in cases table
   - Includes file upload integration
   - Redirects to payment page after submission
   - Real case data confirmed in admin dashboard

3. **Email Notification Service (NEW)**
   - Created backend/src/services/emailService.js
   - Uses nodemailer with Gmail SMTP
   - Sends HTML email to turboresponsehq@gmail.com on new case submission
   - Includes all case details, client info, and direct link to admin dashboard
   - Non-blocking async notification (won't delay form submission)
   - Gracefully handles missing email credentials
   - Added to intakeController.js

4. **Backend Verification**
   - Confirmed all required API endpoints exist:
     * POST /api/intake
     * GET /api/admin/consumer/cases
     * GET /api/admin/consumer/case/:id
     * POST /api/admin/consumer/analyze-case/:id
     * POST /api/admin/consumer/generate-letter/:id
     * GET /api/admin/consumer/notifications

DEPLOYMENT:
✅ Code pushed to GitHub (commit 09a08cc)
✅ Render auto-deploy triggered for both frontend and backend
⏳ Wait 2-3 minutes for deployment

TESTING INSTRUCTIONS:
1. Clear browser cache (or use Incognito)
2. Login at h

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "openai": "^4.24.1",
     "pdfkit": "^0.13.0",
     "pg": "8.11.0",
