Checkpoint: Completed Brain Upload System Phase 2: RAG (Retrieval-Augmented Generation) system with PostgreSQL JSON vector storage. Implemented document processing pipeline (PDF extraction, chunking), OpenAI embeddings generation, cosine similarity search, semantic search API, and integrated retrieval layer with Turbo AI chat and Case Analyzer. Zero external dependencies - all vector operations use PostgreSQL JSON storage.

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "openai": "^4.24.1",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.13.0",
     "pg": "8.11.0",
     "winston": "^3.11.0"
