--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/cors": "^2.8.19",
     "axios": "^1.12.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
