feat: Add PDF conversion for all uploaded attachments
- Install pdfkit, sharp, and pdf-lib dependencies
- Create pdfConverter service with image-to-PDF conversion
- Update upload controller to convert all files to PDF before S3 upload
- Add PDF validation and error handling for unsupported formats
- Update AdminCaseDetail UI with View PDF and Download buttons
- Support formats: PDF (pass-through), JPG, PNG, HEIC, WEBP, TIFF, BMP
- High-quality output: 300 DPI equivalent, full-page, centered
- All attachments now stored as PDFs in S3

Tested locally:
- PNG to PDF conversion: ✅
- PDF validation: ✅
- Unsupported file rejection: ✅

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "openai": "^4.24.1",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.13.0",
     "pg": "8.11.0",
     "react": "^19.1.1",
@@ -81,6 +82,7 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
@@ -121,7 +123,10 @@
     },
     "overrides": {
       "tailwindcss>nanoid": "3.3.7"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   },
   "engines": {
     "node": "20.x"
