--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nodemailer": "^7.0.10",
     "openai": "^4.24.1",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.13.0",
     "pg": "8.11.0",
     "react": "^19.1.1",
@@ -90,6 +91,7 @@
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "vaul": "^1.1.2",
     "winston": "^3.11.0",
     "wouter": "^3.3.5",
