Checkpoint: COMPLETE FIX PACKAGE:
1. **DELETE Endpoint Routing:**
   - Standardized from `/api/case/:id` to `/api/cases/:id` (plural)
   - All admin routes now consistent
   - Frontend updated to call new path
   - Auth middleware verified (403 on auth failure, not 404)

2. **Delete Logic:**
   - Checks cases table first (consumer/offense)
   - Falls back to business_intakes (old Business Audit cases)
   - Handles both case types successfully

3. **Build Script Fix:**
   - Changed package.json: `./build.sh` → `bash build.sh`
   - Fixes Manus platform permission issues
   - Build tested locally and successful

4. **Testing Ready:**
   - All 4 test scenarios documented
   - Expected behavior defined
   - Error handling verified

Ready for deployment testing on Render instance.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "./build.sh",
+    "build": "bash build.sh",
     "build:frontend": "rm -rf dist-frontend && vite build",
     "build:backend": "rm -rf dist && esbuild src/server.js --bundle --platform=node --packages=external --format=cjs --outdir=dist --external:./migrations/*.mjs && cp -r src/migrations dist/migrations 2>/dev/null || true",
-    "build:full": "./build.sh",
+    "build:full": "bash build.sh",
     "start": "node dist/server.js",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
