--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.7.0",
     "@types/react": "^19.1.16",
