Checkpoint: PR #1: Version Endpoint + ESM Build + Render Shim
DELIVERABLE: Version tracking via tRPC + fixed production build + Render compatibility

CHANGES:
1. Added system.version tRPC procedure
2. Fixed build to use tRPC server (ESM) instead of legacy Express (CJS)
3. Added shim file for Render compatibility

BUILD SYSTEM:
- Target: server/_core/index.ts (tRPC server)
- Format: ESM (fixes import.meta.dirname)
- Output: dist/server.mjs (real server) + dist/server.js (shim)
- Shim: dist/server.js imports dist/server.mjs via dynamic import

RENDER COMPATIBILITY:
✅ Render runs: node dist/server.js (no dashboard changes needed)
✅ Shim imports: ./server.mjs
✅ Server starts: ESM server boots normally

FIXES:
✅ "Route.post() requires callback" - legacy routes no longer loaded
✅ "import.meta not available with cjs" - now using ESM
✅ "Cannot find module dist/server.js" - shim provides compatibility
✅ Path resolution errors - import.meta.dirname works in ESM

LOCAL TEST RESULTS:
✅ Build: dist/server.mjs (80.5kb) + dist/server.js (409 bytes)
✅ Start via shim: "Server running on http://localhost:3000/"
✅ No errors, no warnings
✅ OAuth initialized

ENDPOINT: trpc.system.version.useQuery() or GET /api/trpc/system.version?batch=1

SECURITY: ✅ Returns only public info (no secrets)

VERIFICATION STEPS (After Deploy):
1. Wait 3-5 minutes for Render auto-deploy
2. Check logs: Should see "Server running on http://localhost:3000/"
3. Run: ./test-version-endpoint.sh https://turboresponsehq.ai
4. Verify JSON with version, commitSha, environment

EXPECTED RESPONSE:
{
  "version": "abc1234",
  "commitSha": "abc1234...",
  "environment": "production",
  "uptime": "0m 30s",
  "features": {
    "cookieAuth": false,
    "ragSystem": true
  }
}

RISK: 🟢 Low (tested locally, shim tested, no breaking changes)
STATUS: Ready for production deployment

NEXT: Push to GitHub, wait for Render deploy, verify endpoint works

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "bash build.sh",
     "build:frontend": "rm -rf dist-frontend && vite build",
-    "build:backend": "rm -rf dist && esbuild server/_core/index.ts --bundle --platform=node --packages=external --format=esm --outfile=dist/server.mjs && cp -r src/migrations dist/migrations 2>/dev/null || true",
+    "build:backend": "rm -rf dist && esbuild server/_core/index.ts --bundle --platform=node --packages=external --format=esm --outfile=dist/server.mjs && cp server-shim.js dist/server.js && cp -r src/migrations dist/migrations 2>/dev/null || true",
     "build:full": "bash build.sh",
     "start": "node dist/server.mjs",
     "check": "tsc --noEmit",
