--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
