--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "bash build.sh",
     "build:frontend": "rm -rf dist-frontend && vite build",
-    "build:backend": "rm -rf dist && esbuild server/_core/index.ts --bundle --platform=node --packages=external --format=esm --outfile=dist/server.mjs && cp server-shim.js dist/server.js && cp -r src/migrations dist/migrations 2>/dev/null || true",
+    "build:backend": "rm -rf dist && esbuild src/server.js --bundle --platform=node --packages=external --format=cjs --outdir=dist --external:./migrations/*.mjs && cp -r src/migrations dist/migrations 2>/dev/null || true",
     "build:full": "bash build.sh",
-    "start": "node dist/server.mjs",
+    "start": "node dist/server.js",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
@@ -101,7 +101,6 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcrypt": "^6.0.0",
-    "@types/cookie-parser": "^1.4.10",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
