--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
