Trigger GitHub Actions workflow 'Business Intelligence + Operations System' for commit bb9984b

--- a/.github/workflows/bi-ops-automation.yml
+++ b/.github/workflows/bi-ops-automation.yml
@@ -1,141 +1,1 @@
-name: Business Intelligence + Operations System
-
-on:
-  schedule:
-    # Daily Intel Scan: 6:00am ET = 11:00am UTC (ET is UTC-5)
-    - cron: '0 11 * * *'
-    # Daily Delivery: 6:30am ET = 11:30am UTC
-    - cron: '30 11 * * *'
-    # Daily Task Creation: 7:00am ET = 12:00pm UTC
-    - cron: '0 12 * * *'
-    # Weekly Review: Sunday 8:00pm ET = Monday 1:00am UTC
-    - cron: '0 1 * * 1'
-  
-  # Allow manual trigger for testing
-  workflow_dispatch:
-    inputs:
-      job:
-        description: 'Job to run'
-        required: true
-        type: choice
-        options:
-          - daily-scan
-          - daily-delivery
-          - daily-tasks
-          - weekly-review
-          - all-daily
-
-permissions:
-  contents: write
-  issues: write
-
-env:
-  NODE_VERSION: '18'
-
-jobs:
-  # Job 1: Daily Intel Scan (6:00am ET)
-  daily-intel-scan:
-    name: Daily Intel Scan
-    runs-on: ubuntu-latest
-    if: github.event.schedule == '0 11 * * *' || github.event.inputs.job == 'daily-scan' || github.event.inputs.job == 'all-daily'
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Run intel scanner
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          node daily-intel-scanner.js
-      
-      - name: Commit intel report
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docs/intel-reports/
-          git diff --quiet && git diff --staged --quiet || git commit -m "📊 Daily intel report - $(date -u +%Y-%m-%d)"
-          git push
-
-  # Job 2: Daily Delivery (6:30am ET)
-  daily-intel-delivery:
-    name: Daily Intel Delivery
-    runs-on: ubuntu-latest
-    needs: daily-intel-scan
-    if: github.event.schedule == '30 11 * * *' || github.event.inputs.job == 'daily-delivery' || github.event.inputs.job == 'all-daily'
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Send email
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-        run: |
-          node daily-intel-delivery.js
-
-  # Job 3: Daily Task Creation (7:00am ET)
-  daily-task-creation:
-    name: Daily Task Creation
-    runs-on: ubuntu-latest
-    needs: daily-intel-delivery
-    if: github.event.schedule == '0 12 * * *' || github.event.inputs.job == 'daily-tasks' || github.event.inputs.job == 'all-daily'
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Create GitHub issues
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          node daily-task-creator.js
-
-  # Job 4: Weekly Review (Sunday 8:00pm ET)
-  weekly-review:
-    name: Weekly Review
-    runs-on: ubuntu-latest
-    if: github.event.schedule == '0 1 * * 1' || github.event.inputs.job == 'weekly-review'
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Generate weekly review
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-        run: |
-          node weekly-review-generator.js
-      
-      - name: Commit weekly review
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docs/weekly-reviews/
-          git diff --quiet && git diff --staged --quiet || git commit -m "📈 Weekly review - $(date -u +%Y-%m-%d)"
-          git push
+{"ref":"main","inputs":{}}
